--- a/site2.0/css/quiz.css
+++ b/site2.0/css/quiz.css
@@ -1,10 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;800&display=swap');
 
 :root
 {
     --fundo: #012030;
     --texto-branco: #F2F2F2;
     --azul: #45C4B0;
+    /* cor de transparência */
+    --cor-trans: 242, 242, 242;
 }
 
 *
@@ -164,6 +166,62 @@ body
     background-color: var(--azul);
 }
 
+#painel
+{
+    display: none;
+}
+
+#splash
+{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    /* border-radius: 25px; */
+    text-align: left;
+    padding-left: 10vw;
+    background-image: linear-gradient(90deg,rgba(var(--cor-trans), 1) 25%,rgba(var(--cor-trans), .7) 75%), url("../Imagens/imagens_fundo/FundoEx.png");
+
+    & h4
+    {
+        margin: 24vh 0 8vh 0;
+        font-size: 1.25rem;
+        & span
+        {
+            font-weight: bolder;
+            font-size: 2.5rem;
+        }
+    }
+
+    & button
+    {
+        margin-top: 10vh;
+        padding: 2.5vh 5vw;
+        border-radius: 30px;
+        cursor: pointer;
+        border: none;
+        background-color: #B0EAB7;
+        transition: all .2s;
+
+        &:hover
+        {
+            filter: brightness(90%);
+        }
+
+        &:active
+        {
+            position: relative;
+            top: 5px;
+        }
+    }
+
+    & p
+    {
+        width: 40%;
+    }
+}
+
 
 @media only screen and (max-width: 700px)
 {
@@ -199,5 +257,23 @@ body
     #prev
     {
         left: 5px;
+    }
+
+    #splash
+    {
+        padding: 20px;
+        background-image: url("../Imagens/imagens_fundo/FundoEx.png");
+        background-color: var(--texto-branco);
+        background-blend-mode: overlay;
+
+        & h4
+        {
+            margin-top: 17vh;
+        }
+
+        & p
+        {
+            width: 90%;
+        }
     }
 }
