css do passagemDados.php

--- a/site2.0/css/passagemDados.css
+++ b/site2.0/css/passagemDados.css
@@ -1,5 +1,132 @@
-/* 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;800&display=swap');
 
-    deixe aqui vazio por enquanto, mas não delete o arquivo
+:root
+{
+    --fundo: #F2F2F2;
+    --verde-span: #9FC131;
+    --texto-header: #005C53;
+    --texto: #012030;
+    --tamanho-fonte: 2vw;
+    --verde-botao: #DBF227;
+}
 
-*/
+*
+{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+body
+{
+    font-family: 'Poppins', 'sans-serif';
+    background-color: var(--fundo);
+    color: var(--texto);
+    padding: 5px;
+}
+#formulario
+{
+    width: fit-content;
+    margin: 15vh auto;
+    text-align: center;
+}
+
+h3
+{
+    margin-top: 8vh;
+    margin-bottom: 12vh;
+    font-weight: 400;
+}
+
+h3 span
+{
+    font-weight: 600;
+}
+
+#form_1_id h3:last-of-type
+{    
+    font-weight: 500;
+    font-size: .8rem;
+}
+
+label[for="departamentos"]
+{
+    margin-top: 25px;
+}
+
+button
+{
+    cursor: pointer;
+    display: block;
+    margin: 5vh auto;
+    padding: 15px 8vw;
+    background-color:transparent;
+    font-family: 'Poppins', 'sans-serif';
+    font-size: calc(1rem + .5vw);
+    transition: all .2s;
+    border-radius: 25px;
+}
+
+button:hover
+{
+    background-color: var(--texto);
+    color: var(--fundo);
+}
+
+button:active
+{
+    position: relative;
+    top: 5px;
+}
+
+#form_1_id button:first-of-type
+{
+    background-color: var(--verde-botao);
+    border: none;
+    border-radius: 25px;
+}
+
+#form_1_id button:first-of-type:hover
+{
+    filter: brightness(85%);
+    color: var(--texto);
+}
+
+label
+{
+    font-size: 1.25rem;
+}
+
+#form_3_id
+{
+    text-align: left;
+}
+
+input[type="checkbox"]
+{
+    margin-top: 5vh;
+    transform: scale(120%);
+    margin-right: 5px;
+}
+
+#form_3_id button
+{
+    margin: 10vh 0;
+}
+
+.progress
+{
+    position: fixed;
+    height: 7px;
+    width: 100%; 
+    left: 0%;
+    border-radius: 0;
+    top: 0;
+    background: none;
+}
+
+.progress-bar
+{
+    background: var(--texto);
+}
